fixed modal and aligned movie cards

--- a/assets/css/script.css
+++ b/assets/css/script.css
@@ -31,3 +31,71 @@ h2.logo {
     width: 150px; /* Adjust the width as needed */
     margin-right: 10px; /* Add some spacing to separate it from the search bar */
 }
+
+/* Center the movie title in the modal */
+.modal-card-head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+
+
+/* Center the movie plot in the modal */
+#movie-plot {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+/* Center the trailer (iframe) in the modal */
+#video-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Adjust the vertical alignment of the search bar with the title */
+.header-controls {
+    display: flex;
+    align-items: center; /* Vertically align items */
+    margin-top: 5px; /* Add some spacing to separate it from the title */
+}
+
+.field.has-addons {
+    margin-right: 10px;
+    margin-left: 10px; /* Add spacing to horizontally center the search bar */
+    margin-top: 5px;
+}
+
+#movie-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.card-header {
+    height: 70px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-body {
+    flex: 1;
+}
+
+.card-body img {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: 200px;
+    width: auto;
+    margin: 0 auto;
+}
